# LecturePhysicsAwareML

Autoencoder/: data.py  main_autoencoder.ipynb  models.py  plots.py  pyproject.toml
FFNN_introduction/: .gitignore  main_task_FFNN.ipynb  models.py  pyproject.toml
PINNs/: README.md  pyproject.toml
PINNs/notebooks/: lebb.ipynb  nlebb.ipynb
dynamic_modeling/: data_generation.py  pyproject.toml
dynamic_modeling/notebooks/: 1-NODE_and_training.ipynb  2-Energy_based_models.ipynb  dynamic_modeling.ipynb  gauge_invariance.py  two_mass_oscillator.ipynb
dynamic_modeling/src/dynamic_modeling/: __init__.py  _odesolver.py  _plotting.py  models.py  true_system.py
dynamic_modeling/src/dynamic_modeling/spring_pendulum/: __init__.py  _misc.py  _plotting.py  _system.py
dynamic_modeling/src/dynamic_modeling/two_mass_oscillator/: __init__.py  _plotting.py  _system.py
