[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paml_pinns"
version = "25.6"
description = "Package for the PINNs Task in the PAML Lecture"
authors = [
    { name = "Jasper O. Schommartz", email = "schommartz@cps.tu-darmstadt.de" },
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "equinox>=0.12.2",
    "ipykernel>=6.29.5",
    "jax>=0.6.1",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "optax>=0.2.4",
    "paramax>=0.0.3",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

[project.urls]
Repository = "https://github.com/CPSHub/LecturePhysicsAwareML"
Issues = "https://github.com/CPSHub/LecturePhysicsAwareML/issues"
