[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paml_pinns"
version = "25.6"
description = "Package for the PINNs Task in the PAML Lecture"
authors = [
    { name = "Jasper O. Schommartz", email = "schommartz@cps.tu-darmstadt.de" },
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "equinox",
    "jax",
    "matplotlib",
    "numpy",
    "optax",
    "paramax",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

[project.urls]
Repository = "https://github.com/CPSHub/LecturePhysicsAwareML"
Issues = "https://github.com/CPSHub/LecturePhysicsAwareML/issues"
