[project]
name = "dynamic-modeling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Fabian Roth", email = "fabian.roth.24@stud.tu-darmstadt.de" }
]
requires-python = ">=3.11"
dependencies = [
    "diffrax>=0.7.0",
    "matplotlib>=3.10.3",
    "notebook>=7.4.3",
]

[project.scripts]
dynamic-modeling = "dynamic_modeling:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
